# shieldtank

./: .gitignore  .gitmodules  Cargo.toml  README.md  notes.md  pubkey.txt
.github/workflows/: ci.yml
assets/ldtk/: empty_single_world.ldtk  top_down.ldtk
assets/project_config/: top_down.project_config.ron
examples/: example.rs
examples/axe_man_adventure/: Cargo.toml
examples/axe_man_adventure/assets/ldtk/: axe_man_adventure.ldtk
examples/axe_man_adventure/gimp/: title.xcf
examples/axe_man_adventure/src/: actor.rs  animation.rs  main.rs  message_board.rs  player.rs  systems.rs
playground/playground/: Cargo.toml
playground/playground/assets/config/: example.project_config.ron
playground/playground/src/: main.rs
shieldtank_derive/: Cargo.toml
src/: asset_loader.rs  asset_translation.rs  automations.rs  child_spawner.rs  children_spawn.rs  commands.rs  component.rs  component_event.rs  component_traits.rs  debug_gizmos.rs  entity.rs  entity_commands.rs  error.rs  field_instances.rs  gridvania.rs  iid.rs  int_grid.rs  item.rs  item_commands.rs  item_iterator.rs  layer.rs  layer_commands.rs  level.rs  level_background.rs  lib.rs  load_pattern.rs  plugin.rs  prelude.rs  project.rs  project_config.rs  query.rs  test.rs  tiles.rs  tileset_rectangle.rs  util.rs  world.rs
src/asset_loader/: mod.rs
src/assets/: entity.rs  event.rs  layer.rs  level.rs  mod.rs  project.rs  traits.rs  world.rs
src/commands/: entity.rs  layer.rs  ldtk_commands.rs  level.rs  mod.rs  project.rs  world.rs
src/component/: entity.rs  entity_definition.rs  field_instances.rs  filter.rs  global_bounds.rs  grid_values.rs  iid.rs  layer.rs  layer_definition.rs  layer_tiles.rs  level.rs  location.rs  mod.rs  plugin.rs  prelude.rs  project.rs  relations.rs  shieldtank_component.rs  spawn_children.rs  systems.rs  tags.rs  tile.rs  tileset_definition.rs  world.rs  world_bounds.rs
src/component/level_background/: color.rs  image.rs  mod.rs
src/components/: entity.rs  layer.rs  level.rs  mod.rs  traits.rs  world.rs
src/item/: entity.rs  iter.rs  layer.rs  level.rs  macros.rs  mod.rs  project.rs  world.rs
src/item/entity/: iter.rs  mod.rs  plugin.rs  systems.rs
src/item/iter/: mod.rs  recurrent_identifier.rs  unique_identifier.rs
src/item/layer/: iter.rs  mod.rs  plugin.rs  systems.rs
src/item/level/: iter.rs  mod.rs  plugin.rs  systems.rs
src/ldtk/: mod.rs
src/location/: mod.rs
src/query/: by_global_bounds.rs  by_iid.rs  component.rs  entities.rs  entity.rs  getters.rs  grid_value.rs  in_bounds.rs  iter.rs  layer.rs  level.rs  levels.rs  location.rs  mod.rs  projects.rs  traits.rs
src/reexports/: enum_tag_value.rs  field_instance.rs  int_grid_value.rs  int_grid_value_group.rs  layer_definition.rs  level_background_position.rs  mod.rs  neighbour.rs  tile_custom_metadata.rs  tile_instance.rs  tileset_definition.rs  tileset_rectangle.rs  world_layout.rs
src/system_params/: entity.rs  mod.rs  project.rs  traits.rs
src/system_params/entity/: commands.rs  error.rs  item.rs  mod.rs  query.rs
src/system_params/layer/: item.rs  query.rs
src/system_params/level/: error.rs  item.rs  mod.rs  query.rs
