[package]
name = "shieldtank"
version = "0.1.0"
authors = ["Randal Robinson <stinkytoe42@yahoo.com>"]
edition = "2024"
description = "A 2d game framework for Bevy, LDtk, and bevy_ldtk_asset"
repository = "https://github.com/stinkytoe/shieldtank"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
categories = [
	"game-development",
	"game-engines",
	"games",
	"graphics",
	"rendering::data-formats",
]
exclude = [".github", ".gitignore", "assets", "examples"]
readme = "README.md"

[dependencies]
bevy_app = { version = "0.16.0", default-features = false }
bevy_asset = { version = "0.16.0", default-features = false }
bevy_color = { version = "0.16.0", default-features = false }
bevy_derive = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_gizmos = { version = "0.16.0", default-features = false }
bevy_image = { version = "0.16.0", default-features = false }
bevy_log = { version = "0.16.0", default-features = false }
bevy_math = { version = "0.16.0", default-features = false }
bevy_platform = { version = "0.16.0", default-features = false }
bevy_reflect = { version = "0.16.0", default-features = false }
bevy_render = { version = "0.16.0", default-features = false }
bevy_sprite = { version = "0.16.0", default-features = false }
bevy_tasks = { version = "0.16.0", default-features = false }
bevy_transform = { version = "0.16.0", default-features = false }
bevy_utils = { version = "0.16.0", default-features = false }

#pinned to match bevy_image
image = "0.25.2"

either = "1.15"
regex = "1.11"
ron = "0.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

bevy_ldtk_asset = "0.7.0"
