[package]
name = "shieldtank"
version = "0.1.0"
authors = ["Randal Robinson <stinkytoe42@yahoo.com>"]
edition = "2024"
description = "A 2d game framework for Bevy, LDtk, and bevy_ldtk_asset"
repository = "https://github.com/stinkytoe/shieldtank"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]
categories = [
	"game-development",
	"game-engines",
	"games",
	"graphics",
	"rendering::data-formats",
]
exclude = [".github", ".gitignore", "assets", "examples"]
readme = "README.md"

[dependencies]
bevy_app = { version = "0.18.0-rc.2", default-features = false }
bevy_asset = { version = "0.18.0-rc.2", default-features = false }
bevy_camera = { version = "0.18.0-rc.2", default-features = false }
bevy_color = { version = "0.18.0-rc.2", default-features = false }
bevy_derive = { version = "0.18.0-rc.2", default-features = false }
bevy_ecs = { version = "0.18.0-rc.2", default-features = false }
bevy_gizmos = { version = "0.18.0-rc.2", default-features = false, optional = true }
bevy_image = { version = "0.18.0-rc.2", default-features = false }
bevy_input = { version = "0.18.0-rc.2", default-features = false, optional = true }
bevy_log = { version = "0.18.0-rc.2", default-features = false }
bevy_math = { version = "0.18.0-rc.2", default-features = false }
bevy_mesh = { version = "0.18.0-rc.2", default-features = false }
bevy_platform = { version = "0.18.0-rc.2", default-features = false }
bevy_reflect = { version = "0.18.0-rc.2", default-features = false }
bevy_sprite = { version = "0.18.0-rc.2", default-features = false }
bevy_sprite_render = { version = "0.18.0-rc.2", default-features = false }
bevy_transform = { version = "0.18.0-rc.2", default-features = false }
bevy_utils = { version = "0.18.0-rc.2", default-features = false }

#pinned to match bevy_image
image = { version = "0.25.2", default-features = false }

either = "1.15"
itertools = "0.14"
thiserror = "2.0"

#bevy_ldtk_asset = "0.9"
#bevy_ldtk_asset = { path = "../bevy_ldtk_asset/" }
bevy_ldtk_asset = { git = "https://github.com/stinkytoe/bevy_ldtk_asset.git", branch = "bevy_0.18" }

[features]
default = ["debug_gizmos"]
debug_gizmos = ["dep:bevy_input", "dep:bevy_gizmos"]
