[package]
name = "axe_man_adventure"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bevy = { version = "0.15.0" }
bevy-inspector-egui = "0.28"
itertools = "0.13"
shieldtank = { path = "../../" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
